# DolphinTradingIndicators

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  setup.py  tox.ini
docs/source/: conf.py  python_indicators.rst
lib/indicators/: CMakeLists.txt  indicators_core.cpp
lib/indicators/include/: indicators_core.h
lib/indicators/tests/: test_first_derivative.cpp
src/DolphinTrading/: __init__.py  indicator_bindings.cpp  python_indicators.py
src/DolphinTrading.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_first_derivative.py  test_moving_average.py  utilities.py
